--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
